<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/layout_surface"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/layout_surface"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                app:titleTextAppearance="@style/ToolbarTitleText" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/input_background"
            app:cardBackgroundColor="@color/card_cyan_background"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/editTextExerciseName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/input_background"
                    android:hint="@string/post_title_hint"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTextExerciseDetails"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/input_background"
                    android:gravity="top"
                    android:hint="@string/post_content_hint"
                    android:inputType="textMultiLine"
                    android:padding="12dp"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/layout_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/upload_image_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/cyan_button"
                        android:text="@string/upload_image_text"
                        app:icon="@drawable/ic_attach_file" />

                    <Button
                        android:id="@+id/remove_image_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/gray"
                        android:text="@string/remove_image_text"
                        android:visibility="gone"
                        app:icon="@drawable/ic_trash" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imgView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/post_picture_description"
                    android:visibility="gone" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/new_post_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:background="@drawable/circle_background"
        android:clickable="true"
        android:contentDescription="@string/save_new_post_description"
        android:text="@string/new_post_text"
        app:backgroundTint="@color/cyan_button"
        app:fabCustomSize="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="30dp"
        app:srcCompat="@drawable/ic_post_add"
        app:tint="@color/fab_icon_color" />
</androidx.constraintlayout.widget.ConstraintLayout>