<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/input_background"
            app:cardBackgroundColor="@color/card_cyan_background"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/editTextExerciseName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/input_background"
                    android:hint="@string/post_title_hint"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTextExerciseDetails"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/input_background"
                    android:gravity="top"
                    android:hint="@string/post_content_hint"
                    android:inputType="textMultiLine"
                    android:padding="12dp"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/layout_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/upload_image_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/cyan_button"
                        android:text="@string/upload_image_text"
                        app:icon="@drawable/ic_attach_file" />

                    <Button
                        android:id="@+id/remove_image_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/gray"
                        android:text="@string/remove_image_text"
                        android:visibility="gone"
                        app:icon="@drawable/ic_trash" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imgView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/post_picture_description"
                    android:visibility="gone" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:clipChildren="false"
        android:gravity="center|end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cancel_fab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:contentDescription="@string/save_new_post_description"
            app:backgroundTint="@color/cancel_fab_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_close"
            app:tint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/new_post_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/save_new_post_description"
            app:backgroundTint="@color/cyan_button"
            app:fabCustomSize="65dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="30dp"
            app:srcCompat="@drawable/ic_post_add"
            app:tint="@color/fab_icon_color" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>